--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Test de darconex</h1>
+    <h1>Projet Web</h1>
     <h2><a href=https://darconex.com">Visite darconex.com !</a></h2>
 </body>
 </html>
