--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Projet Web</h1>
-    <h2><a href=https://darconex.com">Visite darconex.com !</a></h2>
+    <h2><a href=https://darconex.com/">darconex.com !</a></h2>
 </body>
 </html>
