--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <title>Darconex</title>
+        <style>
+            iframe {
+                    display:none;
+            }
+        </style>
 </head>
-<body>
-    <h1>Projet Web</h1>
-    <h2>=><a href=https://darconex.com/>Darconex</a><=</h2>
+
+<body background="https://i.imgur.com/5rZ91h5.gif">
+        <iframe width="200" height="113" src="https://www.youtube.com/embed/hZsaPu-kthY?playlist=hZsaPu-kthY&amp;autoplay=1&amp;loop=1&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        <center>
+                <img src="https://i.imgur.com/OhoiDOT.png">
+                <h2>=><a href=https://darconex.com/>Darconex</a><=</h2>
+        </center>
 </body>
 </html>
