--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ e<!DOCTYPE html>
             iframe {
                     display:none;
             }
+            h2
+            {
+                Color: Gray;
+            }
         </style>
 </head>
 
@@ -15,7 +19,7 @@ e<!DOCTYPE html>
         <iframe width="200" height="113" src="https://www.youtube.com/embed/hZsaPu-kthY?playlist=hZsaPu-kthY&amp;autoplay=1&amp;loop=1&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         <center>
                 <img src="https://i.imgur.com/OhoiDOT.png">
-                <h1>En cours de dev</h1>
+                <h2>En cours de dev</h2>
                 <h1>=><a href=https://darconex.com/>//**\\DARCONEX\\**//</a><=</h1>
         </center>
 </body>
