--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ e<!DOCTYPE html>
             {
                 Color: Gray;
             }
+                        h3
+            {
+                Color: Green;
+            }
         </style>
 </head>
 
@@ -21,6 +25,7 @@ e<!DOCTYPE html>
                 <img src="https://i.imgur.com/OhoiDOT.png">
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
+                <h3>Sécurité : OK</h3>
                 <h1>=><a href=https://darconex.com/>//**\\DARCONEX\\**//</a><=</h1>
         </center>
 </body>
