--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ e<!DOCTYPE html>
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
+                <h3>Update : En cours</h3>
                 <h1>=><a href=https://darconex.com/>//**\\DARCONEX\\**//</a><=</h1>
         </center>
 </body>
