--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
-                <h3>Blocage d'IP : En cours (Russie, Chine, etc...)</h3>
+                <h3>Blocage d'IP : En cours (Russie, Chine, Inde, etc...)</h3>
+                <h3>100.000.000 IPs Bloquée </h3>
                 <h3>Update : En cours</h3>
                 <h3>Mise en page : Bientot</h3>
                 <h1>=><a href=https://darconex.com/>//**\\DARCONEX\\**//</a><=</h1>
