--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h3>Blocage d'IP : En cours (Russie, Chine, Inde, etc...)</h3>
                 <h3>100.000.000 IPs Bloquée</h3>
                 <h3>Update : En cours</h3>
-                <h1>=><a href=https://darconex.com/>//**\\DARCONEX\\**//</a><=</h1>
+                <h1>=><a href=https://darconex.com/>||//**\\DARCONEX\\**//||</a><=</h1>
         </center>
 </body>
 </html>
