--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
+                <h3>CloudFlare : OK</h3>
                 <h3>Blocage d'User-Agent: OK</h3>
                 <h3>Blocage d'IP : En cours (Russie, Chine, Inde, etc...)</h3>
                 <h3>100.000.000 IPs Bloquée</h3>
