--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
-                <h3>CloudFlare : En cours de transition</h3>
+                <h3>CloudFlare : En cours (site inactive le temps du changement /24h)</h3>
                 <h3>Blocage d'User-Agent: OK</h3>
-                <h3>Blocage d'IP : En cours (Russie, Chine, Inde, etc...)</h3>
-                <h3>100.000.000 IPs Bloquée</h3>
+                <h3>Blocage d'IP : En cours (100.000.000)</h3>
                 <h3>Update : En cours</h3>
-                <h1>=><a href=https://darconex.com/>||//**\\DARCONEX\\**//||</a><=</h1>
+                <h1><a href=https://darconex.com/>||//**\\DARCONEX\\**//||</a></h1>
         </center>
 </body>
 </html>
