--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h3>Sécurité : OK</h3>
                 <h3>CloudFlare : En cours (site inactive le temps du changement /24h)</h3>
                 <h3>Blocage d'User-Agent: OK</h3>
-                <h3>Blocage d'IP : En cours (100.000.000)</h3>
+                <h3>Blocage d'IP : En cours (+100.000.000)</h3>
                 <h3>Update : En cours</h3>
                 <h1><a href=https://darconex.com/>||//**\\DARCONEX\\**//||</a></h1>
         </center>
