--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
                 <h3>Cloudflare : OK</h3>
+                <h3>WAF : OK</h3>
                 <h3>Blocage d'User-Agent: OK</h3>
                 <h3>Blocage d'IP : En cours (+100.000.000)</h3>
                 <h3>Update : En cours</h3>
