--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <iframe width="200" height="113" src="https://www.youtube.com/embed/hZsaPu-kthY?playlist=hZsaPu-kthY&amp;autoplay=1&amp;loop=1&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         <center>
                 <img src="https://i.imgur.com/OhoiDOT.png">
-                <h1><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"> Panne sur la solution CLoudFlare</h1>
+                <h1><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"/> Panne sur la solution CLoudFlare</h1>
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
