--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
                 <h3>Cloudflare : OK</h3>
-                <h1><a href=https://darconex.com/>||//**\\DARCONEX\\**//||</a></h1>
+                <h1><a href=https://darconex.com/>||//**\\DARCONEX\\**//||/></h1>
         </center>
 </body>
 </html>
