--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Darconex</title>
 </head>
 <body background="Matrix.gif">
-        <audio sourc="saw.mp3" />
+        <audio src="saw.mp3" />
         <iframe width="200" height="113" src="https://www.youtube.com/embed/hZsaPu-kthY?playlist=hZsaPu-kthY&amp;autoplay=1&amp;loop=1&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         <center>
                 <img src="X1.png">
