--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Darconex</title>
 </head>
 <body background="Matrix.gif">        
-    <audio src="saw.mp3" control/>
+    <audio src="saw.mp3" controls/>
         <center>
                 <img src="X1.png">
                 <h1><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"/> Panne sur la solution CLoudFlare</h1>
