--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <title>Darconex</title>
 </head>
 <body background="Matrix.gif">        
-    <audio src="saw.mp3" controls></audio>
+<audio src="saw.mp3" controls></audio>
         <center>
                 <img src="X1.png">
-                <h1><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"/> Panne sur la solution CLoudFlare</h1>
+                <h1><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"/> Panne sur la solution Cloudflare</h1>
                 <h2>En cours de dev</h2>
                 <h2>V1.0</h2>
                 <h3>Sécurité : OK</h3>
                 <h3>Cloudflare : OK</h3>
-                <h1><a href=https://darconex.com/>||//**\\DARCONEX\\**//||/></h1>
+                <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||/></h1>
         </center>
 </body>
 </html>
