--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <h3>Sécurité : OK</h3>
                 <h3>Cloudflare : OK</h3>
                 <h4><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"/> Panne sur la solution Cloudflare</h4>
+                <h4><a href="https://downdetector.fr/statut/cloudflare"/>Problème actuel chez Cloudflare</h4>
                 <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||/></h1>
         </center>
 </body>
