--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
         <center>
                 <img src="X1.png">
                 <h1>V1.0</h1>
-                <h2>Sécurité : OK</h2>
+                <img src="On.png" alt="Sécurité"/></h2>
                 <h2>Cloudflare : OK</h2>
-                <h3><a href="https://www.cloudflarestatus.com/incidents/hm7491k53ppg"/> Panne sur la solution Cloudflare</h3>
-                <h3><a href="https://downdetector.fr/statut/cloudflare"/>Problème actuel chez Cloudflare</h3>
                 <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||/></h1>
         </center>
 </body>
