--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <center>
                 <img src="X1.png">
                 <h1>V1.0</h1>
-                <img src="On.png" alt="Sécurité"/></h2>
+                <img src="On.png" alt="Sécurité" width=10% height=10%/>
                 <h2>Cloudflare : OK</h2>
                 <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||/></h1>
         </center>
