--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <center>
                 <img src="X1.png">
                 <h1>V1.0</h1>
-                <img src="On.png" alt="Sécurité" width=5px height=5px/>
-                <h2>Cloudflare : OK</h2>
+                <h2>Sécurité</h2><img src="On.png" alt="Sécurité" width=10px height=10px />
+                <h2>Cloudflare</h2><img src="On.png" alt="Cloudflare" width=10px height=10px />
                 <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||/></h1>
         </center>
 </body>
