--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="image" content="Cercle.png">
     <link rel="stylesheet" href="styles.css">
         <title>Darconex</title>
 </head>
