--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>V1.0</h1>
                 <h2>Sécurité <img src="On.png" alt="Sécurité" width=20px height=20px /></h2>
                 <h2>Cloudflare <img src="On.png" alt="Cloudflare" width=20px height=20px /></h2>
-                <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||/></h1>
+                <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||</h1>
         </center>
 </body>
 </html>
