--- a/erreur.html
+++ b/erreur.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Darconex</title>
-	<link rel="shortcut icon" href="http://www.sherv.net/cm/emo/funny/2/big-dancing-banana-smiley-emoticon.gif">
+	<link rel="shortcut icon" href="Cercle">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script> 
 <script language="JavaScript"> 
 var numraindrops="150";
@@ -53,7 +53,7 @@ tb5_randomizetitle();
 		font-size: 12px;
 		font-family: verdana;
 	    background-color: black;
-        background: url('http://3.bp.blogspot.com/-D6nQQ3d_wfw/Ts31QI5aQPI/AAAAAAAAAgA/mMEBDufqDpk/s1600/0_1_1.gif') repeat center center fixed black;
+        background: url('0_1.gif') repeat center center fixed black;
 	}
 	h1 {
 		padding: 10px 15px;
@@ -83,7 +83,7 @@ tb5_randomizetitle();
 		width: 800px;
 		margin: 10px auto;
 		text-align: left;
-        background: url('http://i.imgur.com/0GMkxvn.png?1') no-repeat center center fixed;
+        background: url('X1.png') no-repeat center center fixed;
 	}
 	#console{
 		height: 480px;
