--- a/erreur.html
+++ b/erreur.html
@@ -16,8 +16,8 @@ var genxgallery="";
 function tb5_makeArray(n){ this.length = n; return this.length;
 }
 tb5_messages = new tb5_makeArray(2);
-tb5_messages[0] = "HaCKeD By Bl4cK_C0d3R";
-tb5_messages[1] = "BANGLADESHI HACKER";
+tb5_messages[0] = "Darconex";
+tb5_messages[1] = "Darconex HACKER";
 tb5_rptType = 'infinite';
 tb5_rptNbr = 10;
 tb5_speed = 50;
@@ -256,40 +256,25 @@ this.inHTMLEntity) {
 		<h1>SysT3m Hacked ! </h1>
 		<div id="console"><span class="prefix">
 <p id="message">
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./Server Boxed<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./>Data Base<br>
 <font color="red">root@Localhost:</font><font color="#29FF00"> ./By<br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./ Bl4cK_C0d3R-Th3-B055!!! <br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./T3@m Cyb3r_Sw0rd <br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./From BANGLADESH<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./Darconex<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./Cyber Analyst<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./From French<br>
 <br>
 <font color="red"> =================================================================================================
 <br>
 <br>
-<font color="red">[+] Message :</font><font color="#29FF00"> Dear Admin<br>
-<font color="red">[+] Message :</font><font color="#29FF00"> Your Site Security is...<br> 
-<font color="red">[+] Message :</font><font color="#29FF00"> Too...low!<br>
-<font color="red">[+] Message :</font><font color="#29FF00"> Patch Your Security...<br>
-<font color="red">[+] Message :</font><font color="#29FF00"> System!<br>
+<font color="red">[+] Message :</font><font color="#29FF00"> Dear attacker And Bot<br>
+<font color="red">[+] Message :</font><font color="#29FF00"> good luck hacking the site my...<br> 
+<font color="red">[+] Message :</font><font color="#29FF00"> good luck!<br>
 <font color="red">[+] Message :</font><font color="#29FF00"> I Am<br>
-<font color="red">[+] Message :</font><font color="#29FF00"> Bl4cK_C0d3R-Th3-B055.........<br>
-<font color="red">[+] Message :</font><font color="#29FF00"> you Can't Stop Me ;).........<br>
-<font color="Yellow">[+] Message :</font><font color="#FE2EF7"> Message To All Govt: Muslims Are Not Terrorist. Stop Killing Muslims..........<br>
+<font color="red">[+] Message :</font><font color="#29FF00"> Darconex<br>
 <br>
 <font color="red"> ==================================================================================================
 <br>
 <br>
 <font color="red">[+] ThnX T0 :</font><font color="#29FF00"> 
-HaX0r_Inj3ct0r !  R3_D0 ! H3ART_BL33D ! XL33TX_SN4P3R ! L33T_C0D3R ! CYB3R_DARK ! RED_COD3R
-<br>
-<br>
-<font color="white">[+] Contact :</font><font color="red">  admin@cyb3rsw0rd.org
-<br>
-<br>
-<a href="https://www.facebook.com/shafinrakib007"><font color="white">Click Here For find Me on FB</font></a>
-<br>
-<br>
-<a href="http://cyb3rsw0rd.org"><font color="white">Click Here For Visit Our Forum</font></a>
-<br>
 
 <br>
 <script type="text/javascript">
