--- a/erreur.html
+++ b/erreur.html
@@ -257,10 +257,10 @@ this.inHTMLEntity) {
 		<div id="console"><span class="prefix">
 <p id="message">
 <font color="red">root@Localhost:</font><font color="#29FF00"> ./>Data Base<br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./By<br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./Darconex<br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./Cyber Analyst<br>
-<font color="red">root@Localhost:</font><font color="#29FF00"> ./From French<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./>By<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./>Darconex<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./>Cyber Analyst<br>
+<font color="red">root@Localhost:</font><font color="#29FF00"> ./>From French<br>
 <br>
 <font color="red"> =================================================================================================
 <br>
