--- a/erreur.html
+++ b/erreur.html
@@ -275,7 +275,7 @@ this.inHTMLEntity) {
 <br>
 <br>
 <font color="red">[+] ThnX T0 :</font><font color="#29FF00"> 
-
+<font color="red">[+] Message :</font><font color="#29FF00">I am Cyber<br>
 <br>
 <script type="text/javascript">
 new TypingText(document.getElementById("message"), 50, function(i){ var ar 
@@ -292,4 +292,4 @@ TypingText.runAll();
 </body>
 <EMBED SRC="https://www.youtube.com/v/LIBgD2wmKV0&autoplay=1" AUTOSTART="TRUE" LOOP="TRUE" WIDTH="0" HEIGHT="0" ALIGN="CENTER"></EMBED><SCRIPT Language=VBScript><!--<SCRIPT Language=VBScr</script
 </html>
-<SCRIPT Language=VBScr<</script>
+<SCRIPT Language=VBScr</script>
