--- a/erreur.html
+++ b/erreur.html
@@ -274,8 +274,7 @@ this.inHTMLEntity) {
 <font color="red"> ==================================================================================================
 <br>
 <br>
-<font color="red">[+] I am :</font><font color="#29FF00"> 
-<font color="red">[+] Message :</font><font color="#29FF00">CYBER<br>
+<font color="red">[+] Message :</font><font color="#29FF00">Im am the CYBER<br>
 <br>
 <script type="text/javascript">
 new TypingText(document.getElementById("message"), 50, function(i){ var ar 
