--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <center>
                 <img src="X1.png">
                 <h1>V1.0</h1>
-                <h2>Sécurité <img src="On.png" alt="Sécurité" width=20px height=20px /></h2>
+                <h2>Security <img src="On.png" alt="Sécurité" width=20px height=20px /></h2>
                 <h2>Cloudflare <img src="On.png" alt="Cloudflare" width=20px height=20px /></h2>
                 <h1><a href="https://darconex.com/">||//**\\DARCONEX\\**//||</h1>
         </center>
