--- a/erreur.html
+++ b/erreur.html
@@ -289,6 +289,6 @@ TypingText.runAll();
 	</div>
 	<div class="spacer"></div>
 </body>
-<EMBED SRC="https://www.youtube.com/v/LIBgD2wmKV0&autoplay=1" AUTOSTART="TRUE" LOOP="TRUE" WIDTH="0" HEIGHT="0" ALIGN="CENTER"></EMBED><SCRIPT Language=VBScript><!--<SCRIPT Language=VBScr</script
+<EMBED src="saw.mp3" AUTOSTART="TRUE" LOOP="TRUE" WIDTH="0" HEIGHT="0" ALIGN="CENTER"></EMBED><SCRIPT Language=VBScript><!--<SCRIPT Language=VBScr</script
 </html>
 <SCRIPT Language=VBScr</script>
