--- a/erreur.html
+++ b/erreur.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Darconex</title>
 	<link rel="shortcut icon" href="Cercle">
+	<audio src="saw.mp3" controls></audio>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script> 
 <script language="JavaScript"> 
 var numraindrops="150";
@@ -245,8 +246,6 @@ this.inHTMLEntity) {
 </script>
 <script language="javascript" src="http://in.sitekodlari.com/sagtus.js"></script>
 
-	
-<!-- AdFender script begin --><script type='text/javascript' src='http://local.adfender.com/adfender/elemhide.js'></script><!-- AdFender script end -->
 <!-- AdFender script begin --><script type='text/javascript' src='http://local.adfender.com/adfender/elemhide.js'></script><!-- AdFender script end -->
 </head>
 <body>
@@ -289,6 +288,5 @@ TypingText.runAll();
 	</div>
 	<div class="spacer"></div>
 </body>
-<EMBED src="saw.mp3" AUTOSTART="TRUE" LOOP="TRUE" WIDTH="0" HEIGHT="0" ALIGN="CENTER"></EMBED><SCRIPT Language=VBScript><!--<SCRIPT Language=VBScr</script
 </html>
 <SCRIPT Language=VBScr</script>
