--- a/error.html
+++ b/error.html
@@ -265,8 +265,8 @@ this.inHTMLEntity) {
 <br>
 <br>
 <font color="red">[+] Message :</font><font color="#29FF00"> Dear attacker And Bot<br>
-<font color="red">[+] Message :</font><font color="#29FF00"> good luck hacking the site my...<br> 
-<font color="red">[+] Message :</font><font color="#29FF00"> good luck!<br>
+<font color="red">[+] Message :</font><font color="#29FF00"> :)<br>
+<font color="red">[+] Message :</font><font color="#29FF00"> 110111101010<br>
 <font color="red">[+] Message :</font><font color="#29FF00"> I Am<br>
 <font color="red">[+] Message :</font><font color="#29FF00"> Darconex<br>
 <br>
