--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php include('includes/header.php'); ?>
+<?php include('includes/header.html'); ?>
 <div class="hero">
   <h1>Cybersécurité - Protégez-vous en ligne</h1>
   <p>Les meilleures pratiques, outils, et ressources pour sécuriser vos données.</p>
