--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="body">
       <div id="header">
-        Darconex OSINT/CTI
+        OSINT/CTI
           <hr/>
       </div>
     </div>
