--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     (R) - Requires registration<br>
     (M) - Indicates a URL that contains the search term and the URL itself must be edited manually<br></p></div>
     <h3>Notes</h3>
-Site officiel : https://darconex.com
+<a href="https://darconex.com">Darconex.com</a>
 
   </body>
 
