--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     (M) - Indicates a URL that contains the search term and the URL itself must be edited manually<br></p></div>
     <h3>Notes</h3>
 <a href="https://darconex.com">Darconex.com</a>
-
+<p>En cours de dev pour information Mr Hamza</p>
   </body>
 
 </html>
