--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu de Navigation</title>
+    <title>Menu Futuriste Centré</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="#home" class="nav-link">Accueil</a></li>
-                <li class="nav-item"><a href="./osint_cti" class="nav-link">OSINT/CTI</a></li>
+                <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="#about" class="nav-link">À Propos</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
