--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav class="navbar">
             <ul class="nav-list">
-                <li class="nav-item"><a href="./index.html" class="nav-link">Accueil</a></li>
+                <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item"><a href="./osint_cti" class="nav-link">OSINT/CTI</a></li>
-                <li class="nav-item"><a href="#about" class="nav-link">À Propos</a></li>
+                <li class="nav-item"><a href="https://darconex.com" class="nav-link">PRO</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </nav>
