--- a/osint_cti/index.html
+++ b/osint_cti/index.html
@@ -21,7 +21,7 @@
     (D) - Google Dork, for more information: <a href="https://en.wikipedia.org/wiki/Google_hacking">Google Hacking</a><br>
     (R) - Requires registration<br>
     (M) - Indicates a URL that contains the search term and the URL itself must be edited manually<br></p></div>
-    <h3>Note</h3>
+    <h3>Notes</h3>
 
   </body>
 
