--- a/cyber/index.html
+++ b/cyber/index.html
@@ -6,7 +6,6 @@
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <title>Darconex CYBER</title>
   </head>
-
   <body>
     <div id="body">
       <div id="header">
@@ -14,11 +13,8 @@
           <hr/>
       </div>
     </div>
-
     <script src="js/arf.js"></script>
-
-    <div class="legend"></div>
-
+    <div class="legend"><p>OSINT (OpenSourceINTelligence)<br>
+    CTI (Cyber Threat Intelligence)</p></div>
   </body>
-
 </html>
