--- a/cyber/index.html
+++ b/cyber/index.html
@@ -15,6 +15,7 @@
     </div>
     <script src="js/arf.js"></script>
     <div class="legend"><p>OSINT (OpenSourceINTelligence)<br>
-    CTI (Cyber Threat Intelligence)</p></div>
+    CTI (Cyber Threat Intelligence)<br>
+    TH (Threat Hunting)</p></div>
   </body>
 </html>
