--- a/cyber/index.html
+++ b/cyber/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <link type="text/css" rel="stylesheet" href="css/arf.css"/>
+    <link type="text/css" rel="stylesheet" href="css/styles.css"/>
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <title>Darconex CYBER</title>
   </head>
@@ -17,5 +18,7 @@
     <div class="legend"><p>OSINT (OpenSourceINTelligence)<br>
     CTI (Cyber Threat Intelligence)<br>
     TH (Threat Hunting)</p></div>
+    <canvas id="canvas"></canvas>
+    <script src="script.js"></script>
   </body>
 </html>
