--- a/cyber/index.html
+++ b/cyber/index.html
@@ -5,18 +5,47 @@
     <link type="text/css" rel="stylesheet" href="css/arf.css"/>
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <title>Darconex CYBER</title>
+    <style>
+      /* Button Styling */
+      button {
+        background-color: #4CAF50; /* Green background */
+        border: none; /* Remove borders */
+        color: white; /* White text */
+        padding: 15px 32px; /* Some padding */
+        text-align: center; /* Centered text */
+        text-decoration: none; /* Remove underline */
+        display: inline-block; /* Make the button inline-block */
+        font-size: 16px; /* Increase font size */
+        margin: 10px 2px; /* Add some margin */
+        cursor: pointer; /* Add a pointer cursor on hover */
+        border-radius: 12px; /* Rounded corners */
+        transition-duration: 0.4s; /* Animation duration */
+      }
+
+      /* Add a hover effect for the button */
+      button:hover {
+        background-color: white; /* White background */
+        color: #4CAF50; /* Green text */
+        border: 2px solid #4CAF50; /* Green border */
+      }
+    </style>
   </head>
   <body>
     <div id="body">
       <div id="header">
         CYBER
-          <hr/>
+        <hr/>
       </div>
+
+      <!-- Button with styling -->
+      <button onclick="alert('Button clicked!')">Click Me</button>
+      
     </div>
     <script src="js/arf.js"></script>
-    <div class="legend"><p>OSINT (OpenSourceINTelligence)<br>
-    CTI (Cyber Threat Intelligence)<br>
-    TH (Threat Hunting)</p></div>
-
+    <div class="legend">
+      <p>OSINT (OpenSourceINTelligence)<br>
+      CTI (Cyber Threat Intelligence)<br>
+      TH (Threat Hunting)</p>
+    </div>
   </body>
 </html>
