--- a/cyber/index.html
+++ b/cyber/index.html
@@ -42,7 +42,7 @@
   <body>
     <div id="body">
       <div id="header">
-        <button onclick="alert('Button clicked!')">Menu</button>
+        <button onclick="alert('https://darconex.github.io/')">Menu</button>
         <div>CYBER</div>
         <hr/>
       </div>
