--- a/cyber/index.html
+++ b/cyber/index.html
@@ -6,35 +6,38 @@
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <title>Darconex CYBER</title>
     <style>
-      button {
-        background-color: #808080;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 14px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition-duration: 0.4s;
-        margin-right: 20px;
+      /* Button (styled link) Styling */
+      .button-link {
+        background-color: #808080; /* Grey background */
+        border: none; /* Remove borders */
+        color: white; /* White text */
+        padding: 10px 20px; /* Some padding */
+        text-align: center; /* Centered text */
+        text-decoration: none; /* Remove underline */
+        display: inline-block; /* Make the button inline-block */
+        font-size: 14px; /* Increase font size */
+        cursor: pointer; /* Add a pointer cursor on hover */
+        border-radius: 5px; /* Slightly rounded corners */
+        transition-duration: 0.4s; /* Animation duration */
+        margin-right: 20px; /* Space between button and CYBER text */
       }
 
-      button:hover {
-        background-color: white;
-        color: #808080;
-        border: 2px solid #808080;
+      /* Add a hover effect for the button */
+      .button-link:hover {
+        background-color: white; /* White background */
+        color: #808080; /* Grey text */
+        border: 2px solid #808080; /* Grey border */
       }
 
+      /* Align header and button */
       #header {
         display: flex;
         align-items: center;
       }
 
-   
+      /* CYBER text alignment */
       #header > div {
-        flex-grow: 1;
+        flex-grow: 1; /* Pushes CYBER text to the right */
         text-align: center;
       }
     </style>
@@ -42,7 +45,8 @@
   <body>
     <div id="body">
       <div id="header">
-        <button onclick="alert('https://darconex.github.io/')">Menu</button>
+        <!-- Button with a link -->
+        <a href="https://darconex.github.io/" class="button-link">Menu</a>
         <div>CYBER</div>
         <hr/>
       </div>
