--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
-                <li class="nav-item"><a href="./cyber" class="nav-link">OSINT/CTI</a></li>
-                <li class="nav-item"><a href="https://darconex.com" class="nav-link">PRO</a></li>
+                <li class="nav-item"><a href="./cyber" class="nav-link">Cyber</a></li>
+                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </nav>
