--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item"><a href="https://darconex.github.io/cyber" class="nav-link">Cyber</a></li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="x-index.html" class="nav-link">Test</a></li>
                 <li class="nav-item"><a href="#A-Propos" class="nav-link">À Propos</a></li>
             </ul>
         </nav>
