--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darconex</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="x-styles.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -14,8 +14,15 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item"><a href="https://darconex.github.io/cyber" class="nav-link">Cyber</a></li>
-                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
-                <li class="nav-item"><a href="x-index.html" class="nav-link">Test</a></li>
+                <li class="nav-item">
+                    <a href="https://darconex.com" class="nav-link">Pro</a>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.com/consulting" class="sub-link">Consulting</a></li>
+                        <li class="sub-item"><a href="https://darconex.com/audit" class="sub-link">Audit</a></li>
+                        <li class="sub-item"><a href="https://darconex.com/training" class="sub-link">Formation</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item"><a href="#A-Propos" class="nav-link">À Propos</a></li>
             </ul>
         </nav>
