--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
-                <li class="nav-item"><a href="https://darconex.github.io/cyber" class="nav-link">Cyber</a></li>
+                <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Cyber</a></li>
+                 <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.com/cyber" class="sub-link">Cyber</a></li>
+                </ul>
+                <li class="nav-item"><a href="#Contact" class="nav-link">Contact</a></li>
                 <li class="nav-item">
                     <a href="https://darconex.com" class="nav-link">Pro</a>
-                    <ul class="sub-menu">
-                        <li class="sub-item"><a href="https://darconex.com/consulting" class="sub-link">Consulting</a></li>
-                        <li class="sub-item"><a href="https://darconex.com/audit" class="sub-link">Audit</a></li>
-                        <li class="sub-item"><a href="https://darconex.com/training" class="sub-link">Formation</a></li>
-                    </ul>
+                   
                 </li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item"><a href="#A-Propos" class="nav-link">À Propos</a></li>
