--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
-                    <a href="https://darconex.github.io/cyber" class="nav-link">Cyber</a>
+                    <a href="#Cyber" class="nav-link">Cyber</a>
                     <ul class="sub-menu">
-                        <li class="sub-item"><a href="https://darconex.com/consulting" class="sub-link">Consulting</a></li>
-                        <li class="sub-item"><a href="https://darconex.com/audit" class="sub-link">Audit</a></li>
-                        <li class="sub-item"><a href="https://darconex.com/training" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cyber" class="sub-link">Consulting</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
