--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darconex</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="x-styles.css">
+    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="css\x-styles.css">
     <script src="script.js"></script>
 </head>
 <body>
