--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="nav-item">
                     <a href="#Cyber" class="nav-link">Cyber</a>
                     <ul class="sub-menu">
-                        <li class="sub-item"><a href="https://darconex.github.io/cyber" class="sub-link">Consulting</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cyber" class="sub-link">Data Cyber</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
