--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Darconex</title>
     <link rel="stylesheet" href="css\styles.css">
     <link rel="stylesheet" href="css\x-styles.css">
-    <script src="script.js"></script>
+    <script src="js\script.js"></script>
 </head>
 <body>
     <header>
