--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <a href="#Cyber" class="nav-link">Cyber</a>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
