--- a/groups/team/index.html
+++ b/groups/team/index.html
@@ -39,7 +39,7 @@
     <div id="body">
       <div id="header">
         <a href="https://darconex.github.io/" class="button-link">Menu</a>
-        <div>CYBER</div>
+        <div>BlueTeam / RedTeam</div>
         <hr/>
       </div>
     </div>
