--- a/groups/team/index.html
+++ b/groups/team/index.html
@@ -44,7 +44,10 @@
       </div>
     </div>
     <script src="js/arf.js"></script>
-    <div class="legend">
+     <div class="legend">
+      <p>BlueTeam (Defensive)<br>
+      RedTeam (Offensive)</p>
+    </div>
     </div>
   </body>
 </html>
