--- a/groups/team/index.html
+++ b/groups/team/index.html
@@ -27,11 +27,12 @@
       }
       #header {
         display: flex;
+        justify-content: space-between;
         align-items: center;
       }
       #header > div {
-        flex-grow: 1;
-        text-align: center;
+        margin-left: auto;
+        text-align: right;
       }
     </style>
   </head>
@@ -40,8 +41,8 @@
       <div id="header">
         <a href="https://darconex.github.io/" class="button-link">Menu</a>
         <div>BlueTeam / RedTeam</div>
-        <hr/>
       </div>
+      <hr/>
     </div>
     <script src="js/arf.js"></script>
      <div class="legend">
