--- a/groups/team/index.html
+++ b/groups/team/index.html
@@ -25,9 +25,13 @@
         color: #808080;
         border: 2px solid #808080;
       }
-      .right-align {
-        text-align: right;
-        margin-right: 20px; /* Optional: adds some space to the right */
+      #header {
+        display: flex;
+        align-items: center;
+      }
+      #header > div {
+        flex-grow: 1;
+        text-align: center;
       }
     </style>
   </head>
@@ -35,13 +39,12 @@
     <div id="body">
       <div id="header">
         <a href="https://darconex.github.io/" class="button-link">Menu</a>
+        <div>BlueTeam / RedTeam</div>
         <hr/>
       </div>
-
-      <div class="right-align">BlueTeam / RedTeam</div>
     </div>
     <script src="js/arf.js"></script>
-    <div class="legend">
+     <div class="legend">
       <p>BlueTeam (Defensive)<br>
       RedTeam (Offensive)</p>
     </div>
