--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Cyber</a>
+                    <a class="nav-link">Cyber</a>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
