--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css\styles.css">
     <link rel="stylesheet" href="css\x-styles.css">
     <script src="js\script.js"></script>
+    <style>
+        /* Appliquer un style de lien au span de "Cyber" */
+        .nav-link-disabled {
+            color: inherit;
+            text-decoration: none;
+            cursor: default;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -15,7 +23,7 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Cyber</a>
+                    <span class="nav-link nav-link-disabled">Cyber</span> <!-- Lien désactivé -->
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
