--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="#A-Propos" class="nav-link">À Propos</a></li>
+                <li class="nav-item"><a href="https://darconex.github.io/a-propos" class="nav-link">À Propos</a></li>
             </ul>
         </nav>
     </header>
