--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">Cyber</span>
+                    <span class="nav-link nav-link-disabled">À Propos</span>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
