--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darconex</title>
-    <link rel="stylesheet" href="css\styles.css">
-    <link rel="stylesheet" href="css\x-styles.css">
-    <script src="js\script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/x-styles.css">
+    <script src="js/script.js"></script>
     <style>
         .nav-link-disabled {
             color: inherit;
@@ -28,7 +28,8 @@
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <a href="https://darconex.com" class="nav-link">Pro</a>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
@@ -39,7 +40,8 @@
                 </li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item">
-                   <span class="nav-link nav-link-disabled">À Propos</span>
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                </li>
             </ul>
         </nav>
     </header>
