--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
+                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item">
-                    <a href="https://darconex.com" class="nav-link">Pro</a>
+                    <span class="nav-link nav-link-disabled">À Propos</span>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
@@ -37,10 +39,6 @@
                         <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
                     </ul>
-                </li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">À Propos</span>
                 </li>
             </ul>
         </nav>
