--- a/certificat.html
+++ b/certificat.html
@@ -11,7 +11,7 @@
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
-            cursor: default;
+            cursor: default.
         }
     </style>
 </head>
@@ -34,8 +34,6 @@
             </ul>
         </nav>
     </header>
-
-    <!-- Certifications Section -->
     <section>
         <h2>Certifications</h2>
         <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
