--- a/charte.html
+++ b/charte.html
@@ -16,8 +16,7 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="light"></div>
+    <header>        <div class="light"></div>
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
