--- a/certificat.html
+++ b/certificat.html
@@ -16,34 +16,31 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="light"></div>
+    <header>        <div class="light"></div>
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">Cyber</span> <!-- Lien désactivé -->
+                    <span class="nav-link nav-link-disabled">Cyber</span>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="https://darconex.github.io/a-propos" class="nav-link">À Propos</a></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h2>Certifications</h2>
-        <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
-        <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
-        <p>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</p>
-        <p>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</p>
-        <p>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</p>
-        <p>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</p>
-        <p>Date de délivrance : janv. 2023 – Vade for M365 Administration</p>
-        <p>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</p>
-    </section>
 </body>
 </html>
