--- a/certificat.html
+++ b/certificat.html
@@ -16,7 +16,8 @@
     </style>
 </head>
 <body>
-    <header>        <div class="light"></div>
+    <header>
+        <div class="light"></div>
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
@@ -42,5 +43,15 @@
             </ul>
         </nav>
     </header>
+    <section class="certificates">
+        <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</p>
+        <p>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</p>
+        <p>Date de délivrance : janv. 2023 – Vade for M365 Administration</p>
+        <p>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</p>
+    </section>
 </body>
 </html>
