--- a/certificat.html
+++ b/certificat.html
@@ -43,5 +43,17 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Section des certificats placée sous le menu -->
+    <section class="certificates">
+        <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</p>
+        <p>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</p>
+        <p>Date de délivrance : janv. 2023 – Vade for M365 Administration</p>
+        <p>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</p>
+    </section>
 </body>
 </html>
