--- a/certificat.html
+++ b/certificat.html
@@ -13,6 +13,20 @@
             text-decoration: none;
             cursor: default;
         }
+
+        /* Ajoutez un style pour forcer l'affichage vertical */
+        .navbar {
+            display: block;
+        }
+
+        .certificates {
+            margin-top: 20px; /* Pour ajouter un peu d'espace entre le menu et la section */
+            font-size: 16px;
+        }
+
+        .certificates p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -44,7 +58,7 @@
         </nav>
     </header>
 
-    <!-- Section des certificats placée sous le menu -->
+    <!-- Section des certificats placée sous le menu, en bloc -->
     <section class="certificates">
         <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
         <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
